# Feasible_IPDDP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  ocp_inverted_pendulum.cpp  ocp_inverted_pendulum.hpp
include/: CMakeLists.txt  ipddp_backwardpass.hpp  ipddp_base.hpp  ipddp_core.hpp  ipddp_dynamics.hpp  ipddp_forwardpass.hpp  ipddp_ocp.hpp  ipddp_options.hpp  ipddp_utils.hpp
src/: CMakeLists.txt  ipddp_backwardpass.cpp  ipddp_core.cpp  ipddp_dynamics.cpp  ipddp_forwardpass.cpp  ipddp_utils.cpp
